--- a/styles/partials/_index.scss
+++ b/styles/partials/_index.scss
@@ -1,6 +1,17 @@
 main.index-page {
 	background: #f1f1f1;
+	p {
+		font-size: 12px;
+		@media (min-width: 500px) {
+			font-size: 13px;
+		}
+		@media (min-width: 900px) {
+			font-size: 16px;
+		}
+	}
 }
+
+//FIRST ARTICLE BELOW HEADER
 
 .top-article {
 	background: grey;
@@ -13,7 +24,7 @@ main.index-page {
 	&__text-wrapper {
 		width: 100%;
 		text-align: left;
-		padding: 8vh 8vw;
+		padding: 4vh 8vw;
 
 		p {
 			padding-top: 4vh;
@@ -22,7 +33,7 @@ main.index-page {
 
 	&__image-wrapper {
 		width: 100%;
-		@media (min-width: 650px) {
+		@media (min-width: 670px) {
 			flex-basis: auto;
 			align-self: stretch;
 		}
@@ -46,24 +57,20 @@ main.index-page {
 	}
 
 	article.index {
-		padding-top: 3vh;
 		margin-top: 5vh;
 		background: white;
 
 		&:nth-of-type(3) {
-			padding-left: 0;
-			padding-bottom: 0;
 			img {
 				padding: 0;
+				width: 100%;
 			}
-		}
-		@media (min-width: 600px) {
-			padding-top: 3vh;
 		}
 	}
 
 	.text-wrapper {
-		padding: 2em 2em;
+		padding: 2em 1.5em;
+		max-width: 80%;
 	}
 
 	.image-wrapper {
@@ -77,19 +84,32 @@ main.index-page {
 			height: 100%;
 			max-height: 100%;
 			max-width: 100%;
-			display: block;
+			//display: block;
+			padding: 0;
+
+			&:nth-of-type(1) {
+				width: 80%;
+				padding: 3em;
+			}
+			&:nth-of-type(2) {
+				padding: 3em;
+			}
 		}
 	}
 }
 
-@media (min-width: 650px) {
+@media (min-width: 670px) {
 	article.index {
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		padding: 0;
 		.image-wrapper {
 			flex-basis: 50%;
+			padding: 3em;
+			img {
+				width: 100%;
+				display: block;
+			}
 		}
 		.text-wrapper {
 			flex-basis: 50%;
@@ -140,4 +160,11 @@ main.index-page {
 			background: lightgrey;
 		}
 	}
+}
+
+button.read-more {
+	color: #2c4f80;
+	width: 100px;
+	height: 30px;
+	border-radius: 10px;
 }
