--- a/styles/partials/_join.scss
+++ b/styles/partials/_join.scss
@@ -1,58 +1,92 @@
 main.join-page {
 	background: #f1f1f1;
 	padding-bottom: 3em;
-
-	h2,
-	p {
-		text-align: center;
-	}
 }
 
 .text-wrapper {
-	width: 85%;
-	padding: 3em 0;
-	max-width: 300px;
+	padding: 5em 3em;
+	max-width: 550px;
+	h2 {
+		text-align: center;
+		color: #e32700;
+		font-weight: 800;
+		font-size: 24px;
+		@media (min-width: 600px) {
+			font-size: 36px;
+		}
+	}
+	p {
+		text-align: center;
+		color: #2c4f80;
+		font-weight: 500;
+		font-size: 18px;
+		@media (min-width: 600px) {
+			font-size: 24px;
+		}
+	}
 }
+
 .form-wrapper {
 	background: white;
 	padding: 2em 2em;
 	width: 85%;
 	box-shadow: 2px 2px 4px 1px rgb(168, 168, 168);
 
-	.form {
-		margin-bottom: 3em;
-		width: 100%;
+	form {
+		padding: 0.5em 0.5em;
 	}
+
 	.grid {
 		display: grid;
-
-		grid-template-columns: 2fr 2fr 1fr;
-		grid-template-rows: 1fr 1fr;
-		grid-row-gap: 2em;
+		margin-bottom: 1em;
+		grid-row-gap: 1em;
 		grid-column-gap: 1em;
-		justify-content: stretch;
-		margin-bottom: 4vh;
+
+		@media (min-width: 550px) {
+			grid-template-columns: 1fr 1fr 1fr;
+			grid-template-rows: 1fr 1fr;
+		}
+		@media (min-width: 750px) {
+			grid-template-columns: 3fr 3fr 2fr;
+			grid-template-rows: 1fr 1fr;
+			grid-row-gap: 1em;
+			grid-column-gap: 2.5em;
+		}
 		/*grid-template-areas:
 			"firstname firstname lastname lastname date-of-birth"
       "profession profession skill skill . ";
      */
-		label:nth-of-type(1) {
-			justify-self: stretch;
-		}
 	}
+}
+
+label {
+	margin: 0;
+	font-size: 14px;
+	color: #2c4f80;
+	font-weight: 700;
+	padding-bottom: 1em;
 }
 
 input,
 textarea {
 	width: 100%;
 	max-width: 1000px;
+	padding: 0.5em;
+	margin-top: 1em;
+	border: 1px solid #2c4f80;
+	border-radius: 5px;
 }
 
+input::placeholder {
+	font-size: 10px;
+}
 button.submit-join {
+	color: #2c4f80;
 	width: 100px;
 	height: 30px;
 	border-radius: 10px;
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
+	margin-top: 1.5em;
 }
