--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,500,700,800|Poppins:400,500,700&display=swap");
 @import "./partials/top-menu";
 @import "./partials/header";
 @import "./partials/footer";
@@ -6,7 +7,7 @@
 @import "./partials/join";
 @import "./partials/index";
 
-//@import typsnitts-länken här istället för html-filen (hämta från googlefonts)
+//@import typsnitts-länken här istället (hämta från googlefonts)
 
 * {
 	box-sizing: border-box;
