--- a/styles/partials/_faq.scss
+++ b/styles/partials/_faq.scss
@@ -1,11 +1,18 @@
 main.faq {
 	background: #f1f1f1;
-	h3 {
-		padding-bottom: 1em;
+	h2 {
+		color: #2c4f80;
+		font-weight: 800;
 	}
-	p,
 	h3 {
-		padding: 0.5em;
+		color: #e32700;
+		font-weight: 500;
+		padding-left: 5px;
+		padding-bottom: 20px;
+	}
+	p {
+		padding-left: 5px;
+		padding-bottom: 20px;
 	}
 	ul {
 		padding: 1.5em;
@@ -32,33 +39,34 @@ main.faq {
 .faq-wrapper {
 	display: flex;
 	flex-direction: column;
+}
 
-	.faq-article {
-		background: white;
-		display: flex;
-		flex-direction: column;
-		min-width: 300px;
-		padding: 0;
-		margin-top: 5vh;
+.faq-article {
+	background: white;
+	display: flex;
+	flex-direction: column;
+	min-width: 300px;
+	padding: 0;
+	margin-top: 5vh;
 
-		&__text-wrapper {
-			padding: 2em 3em;
-			width: 100%;
-		}
-		&__image-wrapper {
-			position: relative;
-			width: 100%;
+	&__text-wrapper {
+		padding: 2em 3em;
+		width: 100%;
+	}
+	&__image-wrapper {
+		position: relative;
+		width: 100%;
+		height: 100%;
+		img {
+			object-fit: cover;
 			height: 100%;
-			img {
-				object-fit: cover;
-				height: 100%;
-				width: 100%;
-				max-height: 100%;
-				max-width: 100%;
-			}
+			width: 100%;
+			max-height: 100%;
+			max-width: 100%;
 		}
 	}
 }
+
 @media (min-width: 700px) {
 	.faq-wrapper {
 		padding-bottom: 0;
