--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -3,7 +3,7 @@
 	background-color: #061b38;
 	background-size: cover;
 	background-position: center;
-	color: white;
+	color: $header-color-1;
 	height: 475px;
 	width: 100%;
 
@@ -19,7 +19,7 @@
 	}
 
 	&::before {
-		background: #2c4f80;
+		background: $header-color-2;
 		clip-path: ellipse(85% 65% at 61% 13%);
 	}
 
@@ -59,10 +59,6 @@
 	&.join-page {
 		top: 70vh;
 	}
-	/*display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-content: center;*/
 
 	@media (min-width: 600px) {
 		width: 300px;
@@ -106,7 +102,7 @@
 	&__main-heading {
 		font-size: 28px;
 		font-weight: 800;
-		color: white;
+		color: $header-color-1;
 		@media (min-width: 600px) {
 			font-size: 40px;
 		}
@@ -118,14 +114,14 @@
 	&__horizontal-line {
 		width: 100%;
 		height: 4px;
-		background-color: white;
+		background-color: $header-color-1;
 		margin: 1em 0;
 	}
 
 	&__sub-heading {
 		font-size: 18px;
 		font-weight: 700;
-		color: #436dac;
+		color: $header-color-2;
 		@media (min-width: 600px) {
 			font-size: 24px;
 		}
