--- a/styles/partials/_index.scss
+++ b/styles/partials/_index.scss
@@ -1,5 +1,5 @@
 main.index-page {
-	background: #f1f1f1;
+	background: $bg-color-main;
 	p {
 		font-size: 12px;
 		@media (min-width: 500px) {
@@ -11,10 +11,10 @@ main.index-page {
 	}
 }
 
-//FIRST ARTICLE BELOW HEADER
+//TOP ARTICLE = FIRST ARTICLE BELOW HEADER
 
 .top-article {
-	background: white;
+	background: $bg-color-article;
 	@media (min-width: 650px) {
 		display: flex;
 		flex-direction: row-reverse;
@@ -27,14 +27,14 @@ main.index-page {
 		padding: 4vh 8vw;
 
 		h2 {
-			color: #e32700;
-			font-weight: 800;
+			color: $heading-color-2;
 		}
 
 		p {
 			padding-top: 4vh;
 			strong {
-				color: #e32700;
+				color: $highlight-color;
+				font-weight: 700;
 			}
 		}
 	}
@@ -59,20 +59,34 @@ main.index-page {
 //ARTICLE COLLECTION
 
 .articles.index {
+	padding: 5vh 5vh;
+	@media (min-width: 670px) {
+		padding: 10vh 10vh;
+	}
 	h2 {
-		padding: 10vh 0 5vh 0;
+		padding-bottom: 5vh;
 		text-align: center;
-		color: #2c4f80;
-		font-weight: 800;
+		color: $heading-color-1;
 	}
 	h3 {
-		color: #e32700;
-		font-weight: 500;
+		color: $heading-color-2;
 	}
+
+	p {
+		font-size: 14px;
+	}
+
 	article.index {
 		margin-top: 5vh;
-		background: white;
-
+		background: $bg-color-article;
+		box-shadow: 0 2px 4px 0 rgba(201, 201, 201, 0.5);
+		&:nth-of-type(1),
+		&:nth-of-type(2) {
+			img {
+				object-fit: contain;
+				width: 75%;
+			}
+		}
 		&:nth-of-type(3) {
 			img {
 				padding: 0;
@@ -82,8 +96,12 @@ main.index-page {
 	}
 
 	.text-wrapper {
-		padding: 2em 1.5em;
+		padding: 2em 1em 1em 1em;
 		max-width: 80%;
+
+		@media (min-width: 670px) {
+			padding: 2em 2em;
+		}
 	}
 
 	.image-wrapper {
@@ -91,18 +109,21 @@ main.index-page {
 		text-align: center;
 		padding: 0;
 
+		&:nth-of-type(3) {
+			padding-top: 1em;
+		}
+
 		img {
-			object-fit: contain;
+			object-fit: cover;
 			width: 100%;
 			height: 100%;
 			max-height: 100%;
 			max-width: 100%;
-			//display: block;
 			padding: 0;
 
 			&:nth-of-type(1) {
 				width: 80%;
-				padding: 3em;
+				padding: 2em;
 			}
 			&:nth-of-type(2) {
 				padding: 3em;
@@ -119,6 +140,7 @@ main.index-page {
 		.image-wrapper {
 			flex-basis: 50%;
 			padding: 3em;
+
 			img {
 				width: 100%;
 				display: block;
@@ -138,11 +160,12 @@ main.index-page {
 		display: grid;
 		grid-template-columns: 2fr 1fr;
 		grid-template-rows: repeat(2, 1fr);
-		gap: 2em;
+		grid-column-gap: 2em;
+		grid-row-gap: 2em;
 
 		.image-wrapper {
 			flex-basis: 50%;
-			padding: 3em;
+			padding: 2em;
 			&:nth-of-type(2) {
 				padding: 0;
 				width: 100%;
@@ -150,7 +173,7 @@ main.index-page {
 		}
 		.text-wrapper {
 			flex-basis: 50%;
-			padding: 3em;
+			padding: 2em;
 			order: 1;
 		}
 
@@ -158,26 +181,25 @@ main.index-page {
 			display: flex;
 			align-items: center;
 			justify-content: center;
-			background: lightgrey;
 		}
 		article:nth-of-type(2) {
 			grid-row: span 2;
 			display: flex;
 			flex-direction: column;
-			background: lightgrey;
 		}
 		article:nth-of-type(3) {
 			display: flex;
 			align-items: center;
 			justify-content: space-evenly;
-			background: lightgrey;
 		}
 	}
 }
 
 button.read-more {
+	background: white;
 	color: #2c4f80;
 	width: 100px;
 	height: 30px;
+	border: solid 1px #2c4f80;
 	border-radius: 10px;
 }
