--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css?family=Montserrat:400,500,700,800|Poppins:400,500,700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,500,700,800&display=swap");
+@import "./partials/variables";
 @import "./partials/top-menu";
 @import "./partials/header";
 @import "./partials/footer";
@@ -6,8 +7,6 @@
 @import "./partials/faq";
 @import "./partials/join";
 @import "./partials/index";
-
-//@import typsnitts-länken här istället (hämta från googlefonts)
 
 * {
 	box-sizing: border-box;
@@ -20,29 +19,33 @@ body {
 	min-width: 200px;
 }
 
+nav {
+	background: $bg-color-nav;
+}
+
 nav,
 header,
 main {
 	font-family: "Montserrat", sans-serif;
-	line-height: 1.3;
 }
 
-/*
-$primaryFont: "Montserrat", sans-serif;
-$secondaryFont: "Poppins", sans-serif;
-*/
-/*
-%image-wrapper {
-	position: relative;
-	height: 100%;
-	width: 100%;
+h2 {
+	font-weight: 800;
 }
 
-%image {
+h3 {
+	font-weight: 500;
+}
+
+p {
+	line-height: 1.5;
+}
+
+strong {
+	font-weight: 700;
+}
+
+img {
+	display: block;
 	object-fit: cover;
-	height: 100%;
-	width: 100%;
-	max-height: 100%;
-	max-width: 100%;
 }
-*/
